--- a/mobilefirst/begivenheder.html
+++ b/mobilefirst/begivenheder.html
@@ -58,7 +58,7 @@
     <!--Sektionerne på siden-->
 
      <!--Sektion 1-->
-     <section class="nederste-sektioner">
+     <section class="øverste-sektioner">
         <section class=sektioner>
             <div class="container"><img src="images/ølsmagninger.jpg" alt=""></div>
             <div class="text">
@@ -81,11 +81,11 @@
             </div>
             <div class="container"><img src="images/fodbold.png" alt=""></div>
         </section>
-
-
+     </section>
 
     <section class="waveto"><img src="images/bølger/en-bølge.svg" alt="wave"></section>
 
+    <section class="nederste-sektioner">
         <!--Sektion 3-->
         <section class=sektioner>
             <div class="container"><img src="images/hygge.png" alt=""></div>
@@ -108,8 +108,7 @@
             </div>
             <div class="container"><img src="images/brætspil.png" alt=""></div>
         </section>
-
-
+    </section>
 
         <section class="wavetre"><img src="images/bølger/en-bølge.svg" alt="wave"></section>
     </section>
